# yui-bot

./: .gitignore  INSTALL-howto.txt  LICENSE  Makefile.am  README.md  TermsOfService.txt  apply-final-fixes.sh  configure-yui-bot.py  configure.ac  configure.oc  diagnose-spec.sh  maketherpmsfromscratch.sh  privacypolicy.txt  requirements.txt  test-project.sh  yui-bot.env.example  yui_bot.py
rpm/: yui-bot.spec  yui-bot.spec.backup  yui-bot.spec.full_backup  yui-bot.spec.minimal  yui-bot.spec.minimal_backup
service/: yui-bot.initd  yui-bot.initd.in  yui-bot.service  yui-bot.service.in
